# sward-warden

./: .gardenignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Makefile  agents.md  fix_ci.patch  garden.yml  patch_config.diff  patch_deployment.py  patch_fluxcd.py  patch_fluxcd_2.py  patch_garden_yml.py  patch_integration_test.py  patch_integration_test_2.py  patch_integration_test_3.py  patch_integration_test_4.py  patch_integration_test_5.py  patch_main.py  patch_tests.py  patch_tests_2.py  patch_tests_3.py  patch_values.py  pr_body.txt  pr_description.md  pr_description.txt  readme.md  sward-warden.code-workspace  test_db.sh  test_output.txt  test_output_2.txt  test_script.py  verify.py
.Jules/: palette.md
.jules/: sentinel.md
charts/: dev-values.yaml
docker-compose/: postgres.yaml
fluxcd-dev/: keycloak-admin.yaml  keycloak-crs.yaml  keycloak-test-user.yaml  keycloak-test-users.yaml  mfe-shell.yaml  monitoring.yaml  slurry-pal.yaml  sward-warden-be.yaml  sward-warden-fe.yaml  sward-warden.yaml  telemetry.yaml  virtualservice-external.yaml  virtualservice.yaml
integration-tests/: garden.yml  log.html  output.xml  package-lock.json  report.html  run-tests-local.sh  run-tests.sh  wait_for_services.py
sp-be-container/: Cargo.toml  Dockerfile
sp-be-container/config/: default.yaml
sp-be-container/src/: cli.rs  config.rs  hams.rs  main.rs  metrics.rs  models.rs  server.rs  startup_tools.rs  state.rs  tokio_tools.rs
sp-be-container/src/webserver/: mod.rs  tests.rs
sp-fe-container/: Dockerfile  angular.json  karma.conf.js  package-lock.json  package.json  tailwind.config.js
sw-be-container/: .gitignore  Cargo.toml  Dockerfile  bench.rs
sw-be-container/.sqlx/: query-45f4a00142987c4f888c3f872481cc900dbf8806c6a3aab063185ae478e73c2b.json  query-467551bec32ede5d2a9a2118a0c851f69aeb3f0f6a9f161fd666057d9b699835.json  query-ab71d43dade6bc911854b07930ee3888836ee7ecf15763fabe73012ed1b540e2.json  query-bb8b5e73cd7186c8e91a4ea25a433c94987e8622016a25f0c12d277e585e4255.json
sw-be-container/config/: default.yaml
sw-be-container/migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql  0002_add_sync_columns.sql  0002_additional_tables.down.sql  0002_additional_tables.up.sql  0002_soil_analyses.sql  0003_add_sync_columns.sql  0003_sync_support.down.sql  0003_sync_support.sql  0003_sync_support.up.sql  0004_farm_records_derogation.down.sql  0004_farm_records_derogation.sql  0005_fertiliser_applications.down.sql  0005_fertiliser_applications.up.sql  0006_spraying_records.down.sql  0006_spraying_records.sql  0007_chemical_fertiliser_rules.down.sql  0007_chemical_fertiliser_rules.sql  0008_organic_manure_rules.down.sql  0008_organic_manure_rules.up.sql  0009_compliance_breaches.down.sql  0009_compliance_breaches.up.sql  0010_farm_derogation.down.sql  0010_farm_derogation.sql  0011_sward_movements.down.sql  0011_sward_movements.sql  0012_spreading_equipment_exemptions.down.sql  0012_spreading_equipment_exemptions.sql  0013_user_roles.down.sql  0013_user_roles.sql  0014_audit_logs.up.sql  0015_spatial_data.down.sql  0015_spatial_data.up.sql  0016_alter_id_to_bigint.down.sql  0016_alter_id_to_bigint.sql  0017_add_phone_description_to_users.down.sql  0017_add_phone_description_to_users.up.sql  0018_field_topographical_data.down.sql  0018_field_topographical_data.sql  0019_inventory_storage.down.sql  (+13 more)
sw-be-container/src/: cli.rs  config.rs  error.rs  hams.rs  lib.rs  main.rs  metrics.rs  models.rs  rules.rs  rules_tests.rs  seed.rs  startup_tools.rs  state.rs  tokio_tools.rs
sw-be-container/src/data/: mod.rs  rules.rs  rules_tests.rs  seed.rs
sw-be-container/src/optimization/: engine.rs  mod.rs  models.rs
sw-be-container/src/service/: keycloak.rs  mod.rs
sw-be-container/src/spatial/: mod.rs  models.rs  service.rs
sw-be-container/src/weather/: data.rs  mod.rs  service.rs  tests.rs
sw-be-container/src/webserver/: admin.rs  applications.rs  auth.rs  compliance.rs  dev_auth.rs  events.rs  farms.rs  fields.rs  inventory.rs  logs.rs  mod.rs  movements.rs  optimization.rs  spatial.rs  sync.rs  tests.rs  users.rs  weather.rs
sw-be-container/tools/seed_data/: Cargo.toml
(+3492 files in other folders)
