[package]
name = "sp-be-container"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.52.1", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
