[package]
name = "sw-be-container"
version = "0.1.0"
edition = "2024"

[dependencies]
jwt-simple = "0.12"
axum = { version = "^0.8", features = ["macros", "multipart"] }
url = { version = "^2.5", features = ["serde"] }
log = "^0.4"
clap = { version = "^4.6", features = ["derive", "string", "env"] }
dotenv = "^0.15"
env_logger = "^0.11"
figment = { version = "^0.10", features = ["yaml", "env"] }
figment_file_provider_adapter = "~0.1"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "0.9"
tokio = { version = "^1.52", features = ["full"] }

opentelemetry = "^0.31"
opentelemetry_sdk = { version = "^0.31", features = ["rt-tokio", "metrics"] }
opentelemetry-prometheus-text-exporter = "^0.2"
prometheus = "^0.14"
tracing = "^0.1"
tracing-opentelemetry = "^0.32"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
axum-prometheus = "^0.10"

thiserror = "^2.0"
reqwest = { version = "^0.13", default-features = false, features = ["json"] }
tower-http = { version = "^0.6", features = ["trace", "cors", "timeout"] }
tokio-util = "^0.7"
serde_with = "^3.16"
humantime-serde = "^1.1"
chrono = { version = "^0.4", features = ["serde"] }
futures = "~0.3"

dashmap = "^6.0"
hams = { git = "https://github.com/PolecatWorks/hams.git" }
ffi-log2 = { git = "https://github.com/PolecatWorks/hams.git" }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
base64 = "0.22.1"

geo = "^0.28"
geos = "^11.1"
geozero = "^0.13"
uuid = { version = "1.23.4", features = ["serde", "v4"] }
axum-core = "0.5.6"
bytes = "1.12.0"
image = "0.25.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1.3"
