[package]
name = "seed_data"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "^0.13", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "^1.52", features = ["full"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0"
fake = { version = "3.0", features = ["derive"] }
rand = "0.8"
